👷 Add submodule for generated POJOs