@@ -7,31 +7,19 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.github.lengors</groupId>
-  <artifactId>protoscout</artifactId>
-  <version>0.0.0-local.0</version>
-  <name>protoscout-pojos</name>
-  <url>https://github.com/lengors/protoscout-pojos</url>
-  <description>Project containing the generated POJOs for ProtoScout.</description>
+  <artifactId>protoscout-parent</artifactId>
+  <version>${revision}</version>
+  <name>protoscout-parent</name>
+  <packaging>pom</packaging>
 
-  <developers>
-    <developer>
-      <name>lengors</name>
-      <email>24527258+lengors@users.noreply.github.com</email>
-    </developer>
-  </developers>
-
-  <scm>
-    <url>https://github.com/lengors/protoscout-pojos</url>
-  </scm>
-
-  <licenses>
-    <license>
-      <name>Apache License 2.0</name>
-      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
-    </license>
-  </licenses>
+  <modules>
+    <module>core</module>
+  </modules>
 
   <properties>
+    <!-- Version -->
+    <revision>0.0.0-local.0</revision>
+
     <!-- Project general settings -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -39,285 +27,50 @@
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
 
+    <!-- Configure maven plugins -->
+    <flatten.flatten.skip>true</flatten.flatten.skip>
+    <maven.install.skip>true</maven.install.skip>
+    <maven.deploy.skip>true</maven.deploy.skip>
+    <checkstyle.skip>true</checkstyle.skip>
+
     <!-- Dependency and plugins versions -->
-    <maven.central-publishing.version>0.5.0</maven.central-publishing.version>
-    <maven.checkerframework.version>3.46.0</maven.checkerframework.version>
-    <maven.checkstyle.version>3.4.0</maven.checkstyle.version>
-    <maven.compiler.version>3.13.0</maven.compiler.version>
-    <maven.assembly.version>3.7.1</maven.assembly.version>
-    <maven.mockito.version>5.12.0</maven.mockito.version>
-    <maven.javadoc.version>3.8.0</maven.javadoc.version>
-    <maven.jacoco.version>0.8.12</maven.jacoco.version>
-    <maven.source.version>3.3.1</maven.source.version>
-    <maven.junit.version>5.10.3</maven.junit.version>
-    <maven.gpg.version>3.2.4</maven.gpg.version>
-    <maven.jar.version>3.4.2</maven.jar.version>
+    <maven.flatten.version>1.6.0</maven.flatten.version>
+    <maven.jsonschema2pojo.version>1.2.2</maven.jsonschema2pojo.version>
+    <maven.checkerframework.version>3.48.2</maven.checkerframework.version>
 
     <!-- SonarCloud -->
     <sonar.organization>lengors-github</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-
+    <sonar.projectBaseDir>core</sonar.projectBaseDir>
   </properties>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.junit</groupId>
-        <artifactId>junit-bom</artifactId>
-        <version>${maven.junit.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
   <dependencies>
-
     <dependency>
       <groupId>org.checkerframework</groupId>
       <artifactId>checker-qual</artifactId>
       <version>${maven.checkerframework.version}</version>
     </dependency>
-
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>${maven.mockito.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-junit-jupiter</artifactId>
-      <version>${maven.mockito.version}</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+    </dependencies>
 
   <build>
     <plugins>
-
-      <!-- Default checkstyle configuration is fine -->
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>${maven.checkstyle.version}</version>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>flatten-maven-plugin</artifactId>
+        <version>${maven.flatten.version}</version>
         <configuration>
-          <includeTestSourceDirectory>true</includeTestSourceDirectory>
-          <configLocation>checkstyle.xml</configLocation>
+          <flattenMode>ossrh</flattenMode>
         </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>${maven.source.version}</version>
         <executions>
           <execution>
-            <id>attach-sources</id>
-            <phase>verify</phase>
+            <id>flatten</id>
+            <phase>process-resources</phase>
             <goals>
-              <goal>jar-no-fork</goal>
+              <goal>flatten</goal>
             </goals>
           </execution>
         </executions>
       </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>${maven.javadoc.version}</version>
-        <configuration>
-          <detectLinks>true</detectLinks>
-          <dependencyLinks>
-            <dependencyLink>
-              <groupId>org.checkerframework</groupId>
-              <artifactId>checker-qual</artifactId>
-              <url>https://checkerframework.org/api</url>
-            </dependencyLink>
-          </dependencyLinks>
-        </configuration>
-        <executions>
-          <execution>
-            <id>attach-javadocs</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-gpg-plugin</artifactId>
-        <version>${maven.gpg.version}</version>
-        <configuration>
-          <keyname>${MAVEN_GPG_KEYNAME}</keyname>
-        </configuration>
-        <executions>
-          <execution>
-            <id>sign-artifacts</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>sign</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>org.sonatype.central</groupId>
-        <artifactId>central-publishing-maven-plugin</artifactId>
-        <version>${maven.central-publishing.version}</version>
-        <extensions>true</extensions>
-        <configuration>
-          <publishingServerId>central</publishingServerId>
-          <autoPublish>true</autoPublish>
-          <waitUntil>published</waitUntil>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>${maven.jacoco.version}</version>
-        <executions>
-          <execution>
-            <id>prepare-agent</id>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>report</id>
-            <goals>
-              <goal>report</goal>
-            </goals>
-            <configuration>
-              <formats>
-                <format>XML</format>
-              </formats>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
     </plugins>
   </build>
-
-  <profiles>
-
-    <profile>
-      <id>checkerframework</id>
-      <!-- If you omit the activation block, run mvn with "-P checkerframework" to run checkers. -->
-      <activation>
-        <jdk>[1.8,)</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>${maven.compiler.version}</version>
-            <configuration>
-              <fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
-              <annotationProcessorPaths>
-                <path>
-                  <groupId>org.checkerframework</groupId>
-                  <artifactId>checker</artifactId>
-                  <version>${maven.checkerframework.version}</version>
-                </path>
-              </annotationProcessorPaths>
-              <annotationProcessors>
-                <!-- Add all the checkers you want to enable here -->
-                <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
-                <annotationProcessor>org.checkerframework.checker.resourceleak.ResourceLeakChecker</annotationProcessor>
-              </annotationProcessors>
-              <compilerArgs>
-                <arg>-Xmaxerrs</arg>
-                <arg>10000</arg>
-                <arg>-Xmaxwarns</arg>
-                <arg>10000</arg>
-              </compilerArgs>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <profile>
-      <id>checkerframework-jdk8</id>
-      <activation>
-        <jdk>1.8</jdk>
-      </activation>
-      <!-- using github.com/google/error-prone-javac is required when running on JDK 8 -->
-      <properties>
-        <javac.version>9+181-r4173-1</javac.version>
-      </properties>
-      <build>
-        <plugins>
-          <plugin>
-            <!-- This plugin execution will copy the com.google.errorprone:javac jar file to
-                 your project’s output directory without adding that jar as an explicit
-                 dependency. -->
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>copy</goal>
-                </goals>
-                <phase>process-sources</phase>
-                <configuration>
-                  <artifact>com.google.errorprone:javac:${javac.version}:jar</artifact>
-                  <outputDirectory>${project.build.directory}/javac</outputDirectory>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <compilerArgs combine.children="append">
-                <arg>-J-Xbootclasspath/p:${project.build.directory}/javac/javac-${javac.version}.jar</arg>
-              </compilerArgs>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <profile>
-      <id>checkerframework-jdk9orlater</id>
-      <activation>
-        <jdk>[9,)</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <compilerArgs combine.children="append">
-                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-              </compilerArgs>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
